# farcaster-goat

./: DEPLOYMENT.md  README.md
contracts/: FoundersClub.sol
goat-frame/: .env  .gitignore  Cargo.toml
goat-frame/assets/: png.txt
goat-frame/mobile/: instruction_set.md
goat-frame/src/: config.rs  errors.rs  frame_logic.rs  main.rs
goat-frame/src/tests/: frame_logic_tests.rs  integration_tests.rs
