[package]
name = "goat-frame"
version = "0.1.0"
edition = "2021"

[dependencies]
   actix-web = "4.9.0"
   actix-files = "0.6.6"
   serde = { version = "1.0.210", features = ["derive"] }
   serde_json = "1.0.128"
   env_logger = "0.11.5"
   log = "0.4.22"
   dotenv = "0.15.0"
   thiserror = "1.0.63"
   envy = "0.4.2"